--- a/APP/IOS/PointExchange/PointExchange/Discover.storyboard
+++ b/APP/IOS/PointExchange/PointExchange/Discover.storyboard
@@ -184,19 +184,19 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8ML-4b-HN4">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="648.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="645"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7tJ-lj-0vu" customClass="GradientView" customModule="PointExchange" customModuleProvider="target">
-                                                <rect key="frame" x="37.5" y="76.5" width="300" height="148"/>
+                                                <rect key="frame" x="37.5" y="74.5" width="300" height="146.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uo7-Js-Wum">
-                                                        <rect key="frame" x="123.5" y="66.5" width="53" height="26.5"/>
+                                                        <rect key="frame" x="123.5" y="65" width="53" height="26.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="----------" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2gc-nm-olo">
-                                                        <rect key="frame" x="115.5" y="101" width="69" height="17"/>
+                                                    <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="----------" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2gc-nm-olo">
+                                                        <rect key="frame" x="115.5" y="99.5" width="69" height="17"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="17" id="N16-c4-uMw"/>
                                                         </constraints>
@@ -204,8 +204,8 @@
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--------" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4EQ-92-xcM">
-                                                        <rect key="frame" x="128.5" y="126" width="43" height="14"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--------" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" enabled="NO" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4EQ-92-xcM">
+                                                        <rect key="frame" x="128.5" y="124.5" width="43" height="14"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="14" id="KSS-hS-WQC"/>
                                                         </constraints>
@@ -214,10 +214,10 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <view clipsSubviews="YES" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="HNc-ry-1jy" customClass="GradientView" customModule="PointExchange" customModuleProvider="target">
-                                                        <rect key="frame" x="97.5" y="-52.5" width="105" height="105"/>
+                                                        <rect key="frame" x="99.5" y="-50.5" width="101" height="101.5"/>
                                                         <subviews>
-                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dyS-lY-agv">
-                                                                <rect key="frame" x="0.0" y="0.0" width="105" height="105"/>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dyS-lY-agv">
+                                                                <rect key="frame" x="0.0" y="0.0" width="101" height="101.5"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="width" secondItem="dyS-lY-agv" secondAttribute="height" multiplier="1:1" id="IY2-LW-KBN"/>
                                                                 </constraints>
@@ -235,7 +235,7 @@
                                                         </constraints>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                                <real key="value" value="60"/>
+                                                                <real key="value" value="0.0"/>
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
                                                     </view>
@@ -251,7 +251,6 @@
                                                     <constraint firstItem="4EQ-92-xcM" firstAttribute="width" relation="lessThanOrEqual" secondItem="7tJ-lj-0vu" secondAttribute="width" multiplier="0.8" id="Tbq-8M-YxL"/>
                                                     <constraint firstItem="4EQ-92-xcM" firstAttribute="top" secondItem="2gc-nm-olo" secondAttribute="bottom" constant="8" id="Z70-tq-pMh"/>
                                                     <constraint firstAttribute="bottom" secondItem="4EQ-92-xcM" secondAttribute="bottom" constant="8" id="bxz-lW-DL1"/>
-                                                    <constraint firstItem="HNc-ry-1jy" firstAttribute="width" secondItem="7tJ-lj-0vu" secondAttribute="width" multiplier="0.35" id="qhK-cQ-WQM"/>
                                                     <constraint firstItem="HNc-ry-1jy" firstAttribute="centerY" secondItem="7tJ-lj-0vu" secondAttribute="top" id="tf3-tY-QBU"/>
                                                     <constraint firstItem="HNc-ry-1jy" firstAttribute="centerX" secondItem="7tJ-lj-0vu" secondAttribute="centerX" id="zYG-Sp-yf0"/>
                                                 </constraints>
@@ -271,13 +270,13 @@
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="优惠券" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FkT-46-wKP">
-                                                <rect key="frame" x="16" y="240.5" width="61.5" height="24"/>
+                                                <rect key="frame" x="16" y="237" width="61.5" height="24"/>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                                 <color key="textColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="70" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="V0n-GS-sfU">
-                                                <rect key="frame" x="16" y="268.5" width="343" height="140"/>
+                                                <rect key="frame" x="16" y="265" width="343" height="140"/>
                                                 <color key="backgroundColor" red="0.96260310920000003" green="0.96260310920000003" blue="0.96260310920000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="140" id="nQc-vx-t8B"/>
@@ -295,7 +294,7 @@
                                                 </prototypes>
                                             </tableView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jzy-cZ-2J8">
-                                                <rect key="frame" x="0.0" y="408.5" width="375" height="240"/>
+                                                <rect key="frame" x="0.0" y="405" width="375" height="240"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q6K-Az-azI">
                                                         <rect key="frame" x="23" y="0.0" width="329" height="48"/>
@@ -384,6 +383,7 @@
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Z6c-zL-YSb" firstAttribute="bottom" secondItem="Db8-qJ-qoN" secondAttribute="bottom" id="G9Y-6R-2hy"/>
+                            <constraint firstItem="HNc-ry-1jy" firstAttribute="width" secondItem="Z6c-zL-YSb" secondAttribute="width" multiplier="0.27" id="IU4-H5-G1M"/>
                             <constraint firstItem="Db8-qJ-qoN" firstAttribute="leading" secondItem="Z6c-zL-YSb" secondAttribute="leading" id="Lub-jj-8f3"/>
                             <constraint firstItem="Z6c-zL-YSb" firstAttribute="trailing" secondItem="Db8-qJ-qoN" secondAttribute="trailing" id="cHz-gB-Kxl"/>
                             <constraint firstItem="Db8-qJ-qoN" firstAttribute="top" secondItem="Z6c-zL-YSb" secondAttribute="top" id="qOd-Sx-OXg"/>
@@ -391,6 +391,7 @@
                         <viewLayoutGuide key="safeArea" id="Z6c-zL-YSb"/>
                     </view>
                     <connections>
+                        <outlet property="bgGradientView" destination="HNc-ry-1jy" id="vX1-hl-zJ8"/>
                         <outlet property="couponTableView" destination="V0n-GS-sfU" id="mnD-qQ-79i"/>
                         <outlet property="couponTableViewHeightCons" destination="nQc-vx-t8B" id="gDM-9S-8AN"/>
                         <outlet property="merchantDescriptionField" destination="2gc-nm-olo" id="6e3-nX-mzv"/>
