--- a/APP/IOS/PointExchange/PointExchange/MerchantCouponTableViewCell.xib
+++ b/APP/IOS/PointExchange/PointExchange/MerchantCouponTableViewCell.xib
@@ -28,24 +28,24 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" editable="NO" text="------------------------------------------------------------" translatesAutoresizingMaskIntoConstraints="NO" id="n9D-2V-Xpg">
-                        <rect key="frame" x="16" y="8" width="149" height="44"/>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="---------------------" translatesAutoresizingMaskIntoConstraints="NO" id="lCw-cv-Qwj">
+                        <rect key="frame" x="29" y="2" width="181" height="57.5"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="textColor" red="0.32929209347232558" green="0.33255241122947732" blue="0.33255241122947732" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
                 </subviews>
                 <color key="backgroundColor" red="0.96260310920000003" green="0.96260310920000003" blue="0.96260310920000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
-                    <constraint firstItem="n9D-2V-Xpg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-3" id="0RB-Pd-Z5l"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="n9D-2V-Xpg" secondAttribute="bottom" constant="5" id="9BP-Vd-14x"/>
+                    <constraint firstAttribute="bottom" secondItem="lCw-cv-Qwj" secondAttribute="bottom" constant="8" id="03P-Wc-9Jm"/>
                     <constraint firstItem="3vr-WT-Anu" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="EFn-gq-Rgi"/>
                     <constraint firstAttribute="trailing" secondItem="mnE-JC-LFU" secondAttribute="trailing" id="GQ0-Yq-ga2"/>
-                    <constraint firstItem="3vr-WT-Anu" firstAttribute="leading" secondItem="n9D-2V-Xpg" secondAttribute="trailing" constant="90" id="SX0-lF-x6F"/>
                     <constraint firstItem="mnE-JC-LFU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-12" id="U16-qH-2GJ"/>
-                    <constraint firstItem="n9D-2V-Xpg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="c1j-bp-lc1"/>
                     <constraint firstItem="mnE-JC-LFU" firstAttribute="centerY" secondItem="3vr-WT-Anu" secondAttribute="centerY" id="kCD-bO-mHp"/>
+                    <constraint firstItem="lCw-cv-Qwj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="29" id="skt-M1-DiP"/>
+                    <constraint firstAttribute="trailing" secondItem="lCw-cv-Qwj" secondAttribute="trailing" constant="110" id="vbu-jd-2k1"/>
+                    <constraint firstItem="lCw-cv-Qwj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="wsI-24-a25"/>
                     <constraint firstItem="mnE-JC-LFU" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="ykT-8G-T13"/>
                 </constraints>
             </tableViewCellContentView>
@@ -54,9 +54,10 @@
             </constraints>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="nameView" destination="n9D-2V-Xpg" id="Yu1-wh-F59"/>
+                <outlet property="nameView" destination="lCw-cv-Qwj" id="jtS-t1-XG3"/>
                 <outlet property="pointLabel" destination="3vr-WT-Anu" id="AaH-Y8-94a"/>
             </connections>
+            <point key="canvasLocation" x="113.59999999999999" y="97.151424287856074"/>
         </tableViewCell>
     </objects>
     <resources>
