--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_card_info.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_card_info.xml
@@ -90,13 +90,28 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="90dp"
-                        android:layout_centerHorizontal="true"
-                        android:text="使用时，出示此码"
-                        android:textSize="18sp"/>
+                        android:orientation="vertical"
+                        android:gravity="center"
+                        android:layout_centerHorizontal="true">
+                        <ImageView
+                            android:id="@+id/imageview_barcode"
+                            android:layout_width="match_parent"
+                            android:layout_height="60dp"
+                            android:layout_marginTop="10dp"
+                            android:contentDescription="@string/BarCodeDescription"
+                             />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:layout_gravity="center"
+                            android:text="使用时，出示此码"
+                            android:textSize="18sp"/>
+                    </LinearLayout>
+
                 </RelativeLayout>
             </android.support.v7.widget.CardView>
         </LinearLayout>
