--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_about_us.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_about_us.xml
@@ -105,7 +105,8 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginBottom="20dp">
 
             <TextView
                 android:layout_width="wrap_content"
